<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="hint_search">Enter keyword</string>
    <string name="hint_search_button">Search</string>
    <string name="error_message_failed_to_fetch">Failed to fetch data</string>
    <string name="rate">Rate :</string>
    <string name="overview">Overview</string>
    <string name="image_movie">Image Movie</string>
    <string name="title_activity_home_activtiy">HomeActivtiy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anggit Prayogo</string>
    <string name="nav_header_subtitle">anggitprayogo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="up_coming">UP COMING</string>
    <string name="search_movie">Search Movie</string>
    <string name="imageview">ImageView</string>
    <string name="detail">Detail</string>
    <string name="empty_response">Empty Search</string>
    <string name="send_text">Check our new movie</string>
    <string name="importss">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="settings">Setting</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="release_date">Release Date</string>
    <string name="remove_from_favourite">Mengahpus movie dari favourite</string>
    <string name="add_to_favourite">Menambahkan movie ke favourite</string>
    <string name="failed_add_to_favourite">Gagal menambahkan ke favourite</string>
    <string name="failed_remove_from_favourite">failed to remove from favourite</string>
    <string name="message_favourite_empty">You have no favourite yet.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="label_have_no_favourite_movie_yet">Belum ada film favourite</string>
    <string name="label_change_language">Change Language</string>
    <string name="label_change">Change</string>
    <string name="label_daily_remainder">Daily Remainder</string>
    <string name="label_release_remainder">Release Remainder</string>
    <string name="label_on">On</string>
    <string name="label_settings">Settings</string>
    <string name="label_off">Off</string>
    <string name="message_daily_remainder_on">daily remainder is on</string>
    <string name="message_cancle_daily_remainder">Cancel daily remainder</string>
    <string name="message_release_remainder_on">Release remainder is on</string>
    <string name="message_cancle_release_remainder">Cancel release remainder</string>
</resources>
