<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star_24dp"
            android:title="@string/favourite" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
