<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:theme="@style/ToolbarStyle"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/label_change_language"/>

            <TextView
                android:id="@+id/tv_change_language"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:text="@string/label_change"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/label_daily_remainder"/>

            <TextView
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switch_daily_remainder"
                android:layout_width="wrap_content"
                android:text="@string/label_on"
                android:checked="true"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:weightSum="12">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/label_release_remainder"/>

            <TextView
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switch_release_remainder"
                android:layout_width="wrap_content"
                android:text="@string/label_on"
                android:checked="true"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>