<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_search_white_24dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:theme="@style/ToolbarStyle"
            android:layout_height="?actionBarSize"
            android:theme="@style/AlertDialog.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:fillViewport="true"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12">

                <ImageView
                    android:id="@+id/iv_movie"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/loading"
                    android:contentDescription="@string/image_movie" />

                <LinearLayout
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/dimen_16"
                    android:paddingEnd="@dimen/dimen_5"
                    android:paddingTop="@dimen/dimen_16"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:maxLines="3"
                        tools:text="Dispicable me : Judul film"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textSize="16sp"
                        android:text="@string/release_date"/>

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="@dimen/dimen_5"
                        tools:text="12 Agustus 2019"
                        android:textColor="@android:color/darker_gray"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="@dimen/dimen_16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dimen_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/rate"/>

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="@dimen/dimen_5"
                        tools:text="7.5"/>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/overview"/>

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>